# OpenTimelineIO-Cpp-Bindings

./: CMakeLists.txt
src/: CMakeLists.txt  OpenTimelineIO.cpp  OpenTimelineIO.hpp
